--- a/res/layout/make_direct_order_page.xml
+++ b/res/layout/make_direct_order_page.xml
@@ -1,84 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
-        <LinearLayout
-                android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent">
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_margin="5dp" android:padding="5dp">
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Direct Sales Order" android:textSize="30dp"
+                android:gravity="center_horizontal"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Outlet Name" android:textSize="25dp"/>
+        <AutoCompleteTextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:layout_margin="5dp">
-            <TextView
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Direct Sales Order" android:layout_margin="5dp" android:textSize="30dp"
-                    android:gravity="center_horizontal"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Outlet Name" android:layout_margin="5dp" android:textSize="25dp"/>
-            <AutoCompleteTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/makeDirectOrderOutletAuto" android:layout_margin="5dp" android:textSize="25dp"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Vehicle" android:layout_margin="5dp" android:textSize="25dp"/>
-            <AutoCompleteTextView android:layout_width="match_parent"
-                                  android:layout_height="wrap_content"
-                                  android:id="@+id/makeDirectOrderVehicleAuto" android:layout_margin="5dp"
-                                  android:textSize="25dp"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Driver" android:layout_margin="5dp" android:textSize="25dp"/>
-            <AutoCompleteTextView android:layout_width="match_parent"
-                                  android:layout_height="wrap_content"
-                                  android:id="@+id/makeDirectOrderDriverAuto" android:layout_margin="5dp"
-                                  android:textSize="25dp"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Driver NIC" android:layout_margin="5dp" android:textSize="25dp"/>
+                android:layout_height="wrap_content"
+                android:id="@+id/makeDirectOrderOutletAuto" android:textSize="25dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Vehicle" android:textSize="25dp"/>
+        <AutoCompleteTextView android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:id="@+id/makeDirectOrderVehicleAuto"
+                              android:textSize="25dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Driver" android:textSize="25dp"/>
+        <AutoCompleteTextView android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:id="@+id/makeDirectOrderDriverAuto"
+                              android:textSize="25dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Driver NIC" android:textSize="25dp"/>
 
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/makeDirectOrderDriverNIC" android:layout_margin="5dp" android:textSize="25dp"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Delivery Date" android:layout_margin="5dp" android:textSize="25dp"/>
-            <DatePicker
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/makeDirectOrderDeliveryDate" android:layout_margin="5dp"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Remarks" android:layout_margin="5dp" android:textSize="25dp"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textMultiLine"
-                    android:ems="10"
-                    android:id="@+id/makeDirectOrderRemarks" android:layout_margin="5dp" android:textSize="25dp"/>
-            <Button
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Next"
-                    android:layout_margin="5dp"
-                    android:textSize="25dp"
-                    android:id="@+id/btnMakeDirectOrderNext" android:layout_gravity="center_horizontal"/>
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/makeDirectOrderDriverNIC" android:textSize="25dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Delivery Date" android:textSize="25dp"/>
+        <DatePicker
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/makeDirectOrderDeliveryDate"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Remarks" android:textSize="25dp"/>
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:id="@+id/makeDirectOrderRemarks" android:textSize="25dp"/>
+        <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Next"
+                android:textSize="25dp"
+                android:id="@+id/btnMakeDirectOrderNext" android:layout_gravity="center_horizontal"/>
+    </LinearLayout>
+</ScrollView>
