--- a/res/layout/invoice_payment_details_page.xml
+++ b/res/layout/invoice_payment_details_page.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" android:padding="5dp">
+              android:layout_height="wrap_content" android:padding="5dp">
 
     <LinearLayout
             android:orientation="vertical"
@@ -32,7 +32,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:weightSum="100" android:padding="1dp">
-    <TextView
+        <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:text="Make Payment"
