--- a/res/layout/made_unproductive_call_page.xml
+++ b/res/layout/made_unproductive_call_page.xml
@@ -3,20 +3,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_margin="5dp"
-                android:text="UnProductive Calls"
-                android:textSize="30dp"
-                android:layout_height="wrap_content" android:gravity="center_horizontal"/>
-        <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/unProductiveCallsListView" android:layout_margin="5dp" android:textSize="25dp"/>
-    </LinearLayout>
+              android:layout_height="match_parent" android:padding="5dp">
+    <TextView
+            android:layout_width="match_parent"
+            android:text="UnProductive Calls"
+            android:textSize="30dp"
+            android:layout_height="wrap_content" android:gravity="center_horizontal"/>
+    <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/unProductiveCallsListView" android:textSize="25dp"/>
 </LinearLayout>
