--- a/res/layout/make_order_page.xml
+++ b/res/layout/make_order_page.xml
@@ -3,33 +3,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent" android:padding="5dp">
 
-    <LinearLayout
-            android:orientation="vertical"
+    <TextView
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent" android:layout_margin="5dp">
-        <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Make Sales Order"
-                android:textSize="30dp" android:gravity="center_horizontal"
-                android:layout_margin="5dp"/>
-        <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Consignment Sales Order"
-                android:id="@+id/btnMakeConsignmentSalesOrder" android:layout_margin="5dp" android:textSize="25dp"/>
-        <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Direct Sales Order"
-                android:id="@+id/btnMakeDirectSalesOrder" android:layout_margin="5dp" android:textSize="25dp"/>
-        <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="Project Sales Order"
-                android:id="@+id/btnMakeProjectSalesOrder" android:layout_margin="5dp" android:textSize="25dp"/>
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Make Sales Order"
+            android:textSize="30dp" android:gravity="center_horizontal"
+            />
+    <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Consignment Sales Order"
+            android:id="@+id/btnMakeConsignmentSalesOrder" android:textSize="25dp"/>
+    <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Direct Sales Order"
+            android:id="@+id/btnMakeDirectSalesOrder" android:textSize="25dp"/>
+    <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Project Sales Order"
+            android:id="@+id/btnMakeProjectSalesOrder" android:textSize="25dp"/>
 </LinearLayout>
