--- a/res/layout/daily_report.xml
+++ b/res/layout/daily_report.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:weightSum="1"
+        android:padding="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <ListView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/listInvoices"></ListView>
+    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnReturnToHome" android:text="Back to Home"
+            android:textSize="25dp"/>
 </LinearLayout>
