--- a/res/layout/make_consignment_order_page.xml
+++ b/res/layout/make_consignment_order_page.xml
@@ -29,8 +29,8 @@
                 android:text="Distributor" android:textSize="25dp"/>
         <AutoCompleteTextView
                 android:layout_width="match_parent" android:layout_height="wrap_content"
-                              android:id="@+id/makeConsignmentOrderDistributorAuto"
-                              android:textSize="25dp"/>
+                android:id="@+id/makeConsignmentOrderDistributorAuto"
+                android:textSize="25dp"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -67,8 +67,8 @@
         <DatePicker
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/makeConsignmentOrderDeliveryDate"
-                />
+                android:calendarViewShown="false"
+                android:id="@+id/makeConsignmentOrderDeliveryDate" android:spinnersShown="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
