--- a/res/layout/pending_invoices_page.xml
+++ b/res/layout/pending_invoices_page.xml
@@ -38,11 +38,11 @@
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ok"
-            android:id="@+id/btnOk"/>
+            android:text="OK"
+            android:id="@+id/btnOk" android:textSize="25dp"/>
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Cancel"
-            android:id="@+id/btnCancel"/>
+            android:id="@+id/btnCancel" android:textSize="25dp"/>
 </LinearLayout>
