--- a/res/layout/cheque_data_input_dialog_page.xml
+++ b/res/layout/cheque_data_input_dialog_page.xml
@@ -63,15 +63,15 @@
             <EditText
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:id="@+id/inputYear" android:layout_weight="1" android:hint="Year"/>
+                    android:id="@+id/inputYear" android:layout_weight="1" android:hint="Year" android:inputType="number"/>
             <EditText
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:id="@+id/inputMonth" android:layout_weight="1" android:hint="Month"/>
+                    android:id="@+id/inputMonth" android:layout_weight="1" android:hint="Month" android:inputType="number"/>
             <EditText
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:id="@+id/inputDate" android:layout_weight="1" android:hint="Date"/>
+                    android:id="@+id/inputDate" android:layout_weight="1" android:hint="Date" android:inputType="number"/>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
