--- a/res/layout/make_direct_order_page.xml
+++ b/res/layout/make_direct_order_page.xml
@@ -55,6 +55,7 @@
         <DatePicker
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:calendarViewShown="false"
                 android:id="@+id/makeDirectOrderDeliveryDate"/>
         <TextView
                 android:layout_width="wrap_content"
