--- a/res/layout/make_direct_project_order_page.xml
+++ b/res/layout/make_direct_project_order_page.xml
@@ -57,6 +57,7 @@
         <DatePicker
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:calendarViewShown="false"
                 android:id="@+id/makeDirectProjectOrderDeliveryDate"/>
         <TextView
                 android:layout_width="wrap_content"
