--- a/res/layout/cheque_payment_detail_page.xml
+++ b/res/layout/cheque_payment_detail_page.xml
@@ -2,22 +2,20 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
-              android:weightSum="4"
+              android:weightSum="5"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent" android:padding="5dp">
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="20dp"
-            android:text="Large Text"
             android:id="@+id/txtPaidValue"/>
     <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="20dp"
-            android:text="Large Text"
             android:id="@+id/txtPaidDate"/>
     <TextView
             android:layout_width="0dp"
@@ -30,6 +28,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="20dp"
-            android:text="Large Text"
             android:id="@+id/txtChequeNo"/>
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="20dp"
+            android:id="@+id/txtAgingAnalysis"/>
 </LinearLayout>
