--- a/res/layout/view_direct_order_page.xml
+++ b/res/layout/view_direct_order_page.xml
@@ -115,6 +115,23 @@
                 android:layout_weight="7"/>
     </LinearLayout>
     <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp" android:weightSum="100">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Total" android:textSize="25dp"
+                android:layout_weight="70"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtViewTotal" android:textSize="25dp"
+                android:layout_weight="30"/>
+    </LinearLayout>
+    <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
