--- a/res/layout/made_unproductive_call_page.xml
+++ b/res/layout/made_unproductive_call_page.xml
@@ -9,6 +9,10 @@
             android:text="UnProductive Calls"
             android:textSize="30dp"
             android:layout_height="wrap_content" android:gravity="center_horizontal"/>
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/inputSearch" android:hint="Search" android:textSize="20dp"/>
     <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
