--- a/res/layout/daily_report.xml
+++ b/res/layout/daily_report.xml
@@ -7,6 +7,9 @@
         android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+    </LinearLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:weightSum="5"
